reformatted notebooks with black

--- a/notebooks/1.0-lti-system-modelling.ipynb
+++ b/notebooks/1.0-lti-system-modelling.ipynb
@@ -21,6 +21,7 @@
     "import cvxpy as cp\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
     "import time"
@@ -181,45 +182,39 @@
    "outputs": [],
    "source": [
     "# Define process model\n",
-    "# This uses the continuous model \n",
-    "def kinematics_model(x,t,u):\n",
+    "# This uses the continuous model\n",
+    "def kinematics_model(x, t, u):\n",
     "    \"\"\"\n",
     "    Returns the set of ODE of the vehicle model.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    L=0.3 #vehicle wheelbase\n",
-    "    dxdt = x[2]*np.cos(x[3])\n",
-    "    dydt = x[2]*np.sin(x[3])\n",
-    "    dvdt = u[0]\n",
-    "    dthetadt = x[2]*np.tan(u[1])/L\n",
     "\n",
-    "    dqdt = [dxdt,\n",
-    "            dydt,\n",
-    "            dvdt,\n",
-    "            dthetadt]\n",
+    "    L = 0.3  # vehicle wheelbase\n",
+    "    dxdt = x[2] * np.cos(x[3])\n",
+    "    dydt = x[2] * np.sin(x[3])\n",
+    "    dvdt = u[0]\n",
+    "    dthetadt = x[2] * np.tan(u[1]) / L\n",
+    "\n",
+    "    dqdt = [dxdt, dydt, dvdt, dthetadt]\n",
     "\n",
     "    return dqdt\n",
     "\n",
-    "def predict(x0,u):\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    x_ = np.zeros((N,T+1))\n",
-    "    \n",
-    "    x_[:,0] = x0\n",
-    "    \n",
-    "    # solve ODE\n",
-    "    for t in range(1,T+1):\n",
     "\n",
-    "        tspan = [0,DT]\n",
-    "        x_next = odeint(kinematics_model,\n",
-    "                         x0,\n",
-    "                         tspan,\n",
-    "                         args=(u[:,t-1],))\n",
+    "def predict(x0, u):\n",
+    "    \"\"\" \"\"\"\n",
+    "\n",
+    "    x_ = np.zeros((N, T + 1))\n",
+    "\n",
+    "    x_[:, 0] = x0\n",
+    "\n",
+    "    # solve ODE\n",
+    "    for t in range(1, T + 1):\n",
+    "\n",
+    "        tspan = [0, DT]\n",
+    "        x_next = odeint(kinematics_model, x0, tspan, args=(u[:, t - 1],))\n",
     "\n",
     "        x0 = x_next[1]\n",
-    "        x_[:,t]=x_next[1]\n",
-    "        \n",
+    "        x_[:, t] = x_next[1]\n",
+    "\n",
     "    return x_"
    ]
   },
@@ -240,9 +235,9 @@
    "source": [
     "%%time\n",
     "\n",
-    "u_bar = np.zeros((M,T))\n",
-    "u_bar[0,:] = 0.2 #m/ss\n",
-    "u_bar[1,:] = np.radians(-np.pi/4) #rad\n",
+    "u_bar = np.zeros((M, T))\n",
+    "u_bar[0, :] = 0.2  # m/ss\n",
+    "u_bar[1, :] = np.radians(-np.pi / 4)  # rad\n",
     "\n",
     "x0 = np.zeros(N)\n",
     "x0[0] = 0\n",
@@ -250,7 +245,7 @@
     "x0[2] = 0\n",
     "x0[3] = np.radians(0)\n",
     "\n",
-    "x_bar=predict(x0,u_bar)"
+    "x_bar = predict(x0, u_bar)"
    ]
   },
   {
@@ -270,18 +265,18 @@
     }
    ],
    "source": [
-    "#plot trajectory\n",
+    "# plot trajectory\n",
     "plt.subplot(2, 2, 1)\n",
-    "plt.plot(x_bar[0,:],x_bar[1,:])\n",
-    "plt.plot(np.linspace(0,10,T+1),np.zeros(T+1),\"b-\")\n",
-    "plt.axis('equal')\n",
-    "plt.ylabel('y')\n",
-    "plt.xlabel('x')\n",
+    "plt.plot(x_bar[0, :], x_bar[1, :])\n",
+    "plt.plot(np.linspace(0, 10, T + 1), np.zeros(T + 1), \"b-\")\n",
+    "plt.axis(\"equal\")\n",
+    "plt.ylabel(\"y\")\n",
+    "plt.xlabel(\"x\")\n",
     "\n",
     "plt.subplot(2, 2, 2)\n",
-    "plt.plot(np.degrees(x_bar[2,:]))\n",
-    "plt.ylabel('theta(t) [deg]')\n",
-    "#plt.xlabel('time')\n",
+    "plt.plot(np.degrees(x_bar[2, :]))\n",
+    "plt.ylabel(\"theta(t) [deg]\")\n",
+    "# plt.xlabel('time')\n",
     "\n",
     "\n",
     "plt.tight_layout()\n",
@@ -305,10 +300,10 @@
     "Control problem statement.\n",
     "\"\"\"\n",
     "\n",
-    "N = 4 #number of state variables\n",
-    "M = 2 #number of control variables\n",
-    "T = 20 #Prediction Horizon\n",
-    "DT = 0.2 #discretization step"
+    "N = 4  # number of state variables\n",
+    "M = 2  # number of control variables\n",
+    "T = 20  # Prediction Horizon\n",
+    "DT = 0.2  # discretization step"
    ]
   },
   {
@@ -317,38 +312,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_linear_model(x_bar,u_bar):\n",
+    "def get_linear_model(x_bar, u_bar):\n",
     "    \"\"\"\n",
     "    Computes the LTI approximated state space model x' = Ax + Bu + C\n",
     "    \"\"\"\n",
-    "    \n",
-    "    L=0.3 #vehicle wheelbase\n",
-    "    \n",
+    "\n",
+    "    L = 0.3  # vehicle wheelbase\n",
+    "\n",
     "    x = x_bar[0]\n",
     "    y = x_bar[1]\n",
     "    v = x_bar[2]\n",
     "    theta = x_bar[3]\n",
-    "    \n",
+    "\n",
     "    a = u_bar[0]\n",
     "    delta = u_bar[1]\n",
-    "    \n",
-    "    A = np.zeros((N,N))\n",
-    "    A[0,2]=np.cos(theta)\n",
-    "    A[0,3]=-v*np.sin(theta)\n",
-    "    A[1,2]=np.sin(theta)\n",
-    "    A[1,3]=v*np.cos(theta)\n",
-    "    A[3,2]=v*np.tan(delta)/L\n",
-    "    A_lin=np.eye(N)+DT*A\n",
-    "    \n",
-    "    B = np.zeros((N,M))\n",
-    "    B[2,0]=1\n",
-    "    B[3,1]=v/(L*np.cos(delta)**2)\n",
-    "    B_lin=DT*B\n",
-    "    \n",
-    "    f_xu=np.array([v*np.cos(theta), v*np.sin(theta), a,v*np.tan(delta)/L]).reshape(N,1)\n",
-    "    C_lin = DT*(f_xu - np.dot(A,x_bar.reshape(N,1)) - np.dot(B,u_bar.reshape(M,1)))\n",
-    "    \n",
-    "    return np.round(A_lin,4), np.round(B_lin,4), np.round(C_lin,4)"
+    "\n",
+    "    A = np.zeros((N, N))\n",
+    "    A[0, 2] = np.cos(theta)\n",
+    "    A[0, 3] = -v * np.sin(theta)\n",
+    "    A[1, 2] = np.sin(theta)\n",
+    "    A[1, 3] = v * np.cos(theta)\n",
+    "    A[3, 2] = v * np.tan(delta) / L\n",
+    "    A_lin = np.eye(N) + DT * A\n",
+    "\n",
+    "    B = np.zeros((N, M))\n",
+    "    B[2, 0] = 1\n",
+    "    B[3, 1] = v / (L * np.cos(delta) ** 2)\n",
+    "    B_lin = DT * B\n",
+    "\n",
+    "    f_xu = np.array(\n",
+    "        [v * np.cos(theta), v * np.sin(theta), a, v * np.tan(delta) / L]\n",
+    "    ).reshape(N, 1)\n",
+    "    C_lin = DT * (\n",
+    "        f_xu - np.dot(A, x_bar.reshape(N, 1)) - np.dot(B, u_bar.reshape(M, 1))\n",
+    "    )\n",
+    "\n",
+    "    return np.round(A_lin, 4), np.round(B_lin, 4), np.round(C_lin, 4)"
    ]
   },
   {
@@ -368,9 +367,9 @@
    "source": [
     "%%time\n",
     "\n",
-    "u_bar = np.zeros((M,T))\n",
-    "u_bar[0,:] = 0.2 #m/s\n",
-    "u_bar[1,:] = np.radians(-np.pi/4) #rad\n",
+    "u_bar = np.zeros((M, T))\n",
+    "u_bar[0, :] = 0.2  # m/s\n",
+    "u_bar[1, :] = np.radians(-np.pi / 4)  # rad\n",
     "\n",
     "x0 = np.zeros(N)\n",
     "x0[0] = 0\n",
@@ -378,18 +377,18 @@
     "x0[2] = 0\n",
     "x0[3] = np.radians(0)\n",
     "\n",
-    "x_bar=np.zeros((N,T+1))\n",
-    "x_bar[:,0]=x0\n",
+    "x_bar = np.zeros((N, T + 1))\n",
+    "x_bar[:, 0] = x0\n",
     "\n",
-    "for t in range (1,T+1):\n",
-    "    xt=x_bar[:,t-1].reshape(N,1)\n",
-    "    ut=u_bar[:,t-1].reshape(M,1)\n",
-    "    \n",
-    "    A,B,C=get_linear_model(xt,ut)\n",
-    "    \n",
-    "    xt_plus_one = np.dot(A,xt)+np.dot(B,ut)+C\n",
-    "    \n",
-    "    x_bar[:,t]= np.squeeze(xt_plus_one)"
+    "for t in range(1, T + 1):\n",
+    "    xt = x_bar[:, t - 1].reshape(N, 1)\n",
+    "    ut = u_bar[:, t - 1].reshape(M, 1)\n",
+    "\n",
+    "    A, B, C = get_linear_model(xt, ut)\n",
+    "\n",
+    "    xt_plus_one = np.dot(A, xt) + np.dot(B, ut) + C\n",
+    "\n",
+    "    x_bar[:, t] = np.squeeze(xt_plus_one)"
    ]
   },
   {
@@ -409,18 +408,18 @@
     }
    ],
    "source": [
-    "#plot trajectory\n",
+    "# plot trajectory\n",
     "plt.subplot(2, 2, 1)\n",
-    "plt.plot(x_bar[0,:],x_bar[1,:])\n",
-    "plt.plot(np.linspace(0,10,T+1),np.zeros(T+1),\"b-\")\n",
-    "plt.axis('equal')\n",
-    "plt.ylabel('y')\n",
-    "plt.xlabel('x')\n",
+    "plt.plot(x_bar[0, :], x_bar[1, :])\n",
+    "plt.plot(np.linspace(0, 10, T + 1), np.zeros(T + 1), \"b-\")\n",
+    "plt.axis(\"equal\")\n",
+    "plt.ylabel(\"y\")\n",
+    "plt.xlabel(\"x\")\n",
     "\n",
     "plt.subplot(2, 2, 2)\n",
-    "plt.plot(np.degrees(x_bar[2,:]))\n",
-    "plt.ylabel('theta(t)')\n",
-    "#plt.xlabel('time')\n",
+    "plt.plot(np.degrees(x_bar[2, :]))\n",
+    "plt.ylabel(\"theta(t)\")\n",
+    "# plt.xlabel('time')\n",
     "\n",
     "\n",
     "plt.tight_layout()\n",
