--- a/notebooks/models/ackerman_model.ipynb
+++ b/notebooks/models/ackerman_model.ipynb
@@ -48,22 +48,19 @@
     }
    ],
    "source": [
-    "x,y,theta,v,delta,L,a = sp.symbols(\"x y theta v delta L a\")\n",
+    "x, y, theta, v, delta, L, a = sp.symbols(\"x y theta v delta L a\")\n",
     "\n",
-    "gs = sp.Matrix([[ sp.cos(theta)*v],\n",
-    "               [ sp.sin(theta)*v],\n",
-    "               [a],\n",
-    "               [ v*sp.tan(delta)/L]])\n",
+    "gs = sp.Matrix([[sp.cos(theta) * v], [sp.sin(theta) * v], [a], [v * sp.tan(delta) / L]])\n",
     "\n",
-    "X = sp.Matrix([x,y,v,theta])\n",
+    "X = sp.Matrix([x, y, v, theta])\n",
     "\n",
-    "#A\n",
-    "A=gs.jacobian(X)\n",
+    "# A\n",
+    "A = gs.jacobian(X)\n",
     "\n",
-    "U = sp.Matrix([a,delta])\n",
+    "U = sp.Matrix([a, delta])\n",
     "\n",
-    "#B\n",
-    "B=gs.jacobian(U)\n",
+    "# B\n",
+    "B = gs.jacobian(U)\n",
     "display(A)\n",
     "display(B)"
    ]
@@ -132,9 +129,9 @@
    "source": [
     "DT = sp.symbols(\"dt\")\n",
     "\n",
-    "display(sp.eye(4)+A*DT)\n",
-    "display(B*DT)\n",
-    "display(DT*(gs - A*X - B*U))"
+    "display(sp.eye(4) + A * DT)\n",
+    "display(B * DT)\n",
+    "display(DT * (gs - A * X - B * U))"
    ]
   },
   {
