--- a/notebooks/models/differential_model.ipynb
+++ b/notebooks/models/differential_model.ipynb
@@ -36,17 +36,13 @@
    "source": [
     "import sympy as sp\n",
     "\n",
-    "x,y,theta,psi,cte,v,w = sp.symbols(\"x y theta psi cte v w\")\n",
+    "x, y, theta, psi, cte, v, w = sp.symbols(\"x y theta psi cte v w\")\n",
     "\n",
-    "gs = sp.Matrix([[ sp.cos(theta)*v],\n",
-    "               [ sp.sin(theta)*v],\n",
-    "               [w],\n",
-    "               [-w],\n",
-    "               [ v*sp.sin(psi)]])\n",
+    "gs = sp.Matrix([[sp.cos(theta) * v], [sp.sin(theta) * v], [w], [-w], [v * sp.sin(psi)]])\n",
     "\n",
-    "state = sp.Matrix([x,y,theta,psi,cte])\n",
+    "state = sp.Matrix([x, y, theta, psi, cte])\n",
     "\n",
-    "#A\n",
+    "# A\n",
     "gs.jacobian(state)"
    ]
   },
@@ -75,9 +71,9 @@
     }
    ],
    "source": [
-    "state = sp.Matrix([v,w])\n",
+    "state = sp.Matrix([v, w])\n",
     "\n",
-    "#B\n",
+    "# B\n",
     "gs.jacobian(state)"
    ]
   },
@@ -106,16 +102,16 @@
    "source": [
     "import sympy as sp\n",
     "\n",
-    "x,y,theta,psi,cte,v,w ,dt= sp.symbols(\"x y theta psi cte v w dt\")\n",
+    "x, y, theta, psi, cte, v, w, dt = sp.symbols(\"x y theta psi cte v w dt\")\n",
     "\n",
-    "gs = sp.Matrix([[x + sp.cos(theta)*v*dt],\n",
-    "               [y+ sp.sin(theta)*v*dt],\n",
-    "               [theta + w*dt]])\n",
+    "gs = sp.Matrix(\n",
+    "    [[x + sp.cos(theta) * v * dt], [y + sp.sin(theta) * v * dt], [theta + w * dt]]\n",
+    ")\n",
     "\n",
-    "state = sp.Matrix([x,y,theta])\n",
+    "state = sp.Matrix([x, y, theta])\n",
     "\n",
-    "#A\n",
-    "gs.jacobian(state)#.subs({x:0,y:0,theta:0})"
+    "# A\n",
+    "gs.jacobian(state)  # .subs({x:0,y:0,theta:0})"
    ]
   },
   {
@@ -141,10 +137,10 @@
     }
    ],
    "source": [
-    "state = sp.Matrix([v,w])\n",
+    "state = sp.Matrix([v, w])\n",
     "\n",
-    "#B\n",
-    "gs.jacobian(state)#.subs({x:0,y:0,theta:0})"
+    "# B\n",
+    "gs.jacobian(state)  # .subs({x:0,y:0,theta:0})"
    ]
   },
   {
@@ -195,22 +191,19 @@
     }
    ],
    "source": [
-    "x,y,theta,v,delta,L,a = sp.symbols(\"x y theta v delta L a\")\n",
+    "x, y, theta, v, delta, L, a = sp.symbols(\"x y theta v delta L a\")\n",
     "\n",
-    "gs = sp.Matrix([[ sp.cos(theta)*v],\n",
-    "               [ sp.sin(theta)*v],\n",
-    "               [a],\n",
-    "               [ v*sp.tan(delta)/L]])\n",
+    "gs = sp.Matrix([[sp.cos(theta) * v], [sp.sin(theta) * v], [a], [v * sp.tan(delta) / L]])\n",
     "\n",
-    "X = sp.Matrix([x,y,v,theta])\n",
+    "X = sp.Matrix([x, y, v, theta])\n",
     "\n",
-    "#A\n",
-    "A=gs.jacobian(X)\n",
+    "# A\n",
+    "A = gs.jacobian(X)\n",
     "\n",
-    "U = sp.Matrix([a,delta])\n",
+    "U = sp.Matrix([a, delta])\n",
     "\n",
-    "#B\n",
-    "B=gs.jacobian(U)\n",
+    "# B\n",
+    "B = gs.jacobian(U)\n",
     "display(A)\n",
     "display(B)"
    ]
@@ -279,9 +272,9 @@
    "source": [
     "DT = sp.symbols(\"dt\")\n",
     "\n",
-    "display(sp.eye(4)+A*DT)\n",
-    "display(B*DT)\n",
-    "display(DT*(gs - A*X - B*U))"
+    "display(sp.eye(4) + A * DT)\n",
+    "display(B * DT)\n",
+    "display(DT * (gs - A * X - B * U))"
    ]
   },
   {
