--- a/notebooks/models/motion_model.ipynb
+++ b/notebooks/models/motion_model.ipynb
@@ -20,9 +20,26 @@
     "import matplotlib.pyplot as plt\n",
     "import time\n",
     "from scipy.stats import norm\n",
-    "from sympy import Symbol, symbols, Matrix, sin, cos, integrate, diff, Q, refine, simplify, factor, expand_trig, exp, latex, Integral\n",
+    "from sympy import (\n",
+    "    Symbol,\n",
+    "    symbols,\n",
+    "    Matrix,\n",
+    "    sin,\n",
+    "    cos,\n",
+    "    integrate,\n",
+    "    diff,\n",
+    "    Q,\n",
+    "    refine,\n",
+    "    simplify,\n",
+    "    factor,\n",
+    "    expand_trig,\n",
+    "    exp,\n",
+    "    latex,\n",
+    "    Integral,\n",
+    ")\n",
     "from sympy import init_printing\n",
     "from sympy.utilities.codegen import codegen\n",
+    "\n",
     "init_printing(use_latex=True)"
    ]
   },
@@ -674,14 +691,17 @@
     }
    ],
    "source": [
-    "speed, yaw, dt, x, y, acceleration, t, d_sin, d_cos = symbols('v \\\\theta \\Delta{t} x y a t d_{sin} d_{cos}')\n",
-    "turn_rate_non_zero = Symbol('\\hat{\\omega}', nonzero=True, finite=True)\n",
-    "zero_turn_rate = Symbol('\\omega_0', zero=True)\n",
-    "turn_rate = Symbol('\\omega')\n",
+    "speed, yaw, dt, x, y, acceleration, t, d_sin, d_cos = symbols(\n",
+    "    \"v \\\\theta \\Delta{t} x y a t d_{sin} d_{cos}\"\n",
+    ")\n",
+    "turn_rate_non_zero = Symbol(\"\\hat{\\omega}\", nonzero=True, finite=True)\n",
+    "zero_turn_rate = Symbol(\"\\omega_0\", zero=True)\n",
+    "turn_rate = Symbol(\"\\omega\")\n",
     "\n",
     "state_catr = Matrix([x, y, yaw, speed, turn_rate, acceleration])\n",
     "print(\"CART state is:\")\n",
     "display(state_catr)\n",
+    "\n",
     "\n",
     "def get_next_state(turn_rate):\n",
     "    # Specify the functions for yaw, speed, x, and y.\n",
@@ -698,35 +718,45 @@
     "\n",
     "    return Matrix([next_x, next_y, next_yaw, next_speed, turn_rate, acceleration])\n",
     "\n",
+    "\n",
     "# There is a difference in computation betwee the cases when the turn rate is allowed to be zero or not\n",
     "print(\"Assuming a non-zero turn rate, the next state is:\")\n",
     "next_state = get_next_state(turn_rate_non_zero)\n",
     "display(next_state)\n",
     "\n",
-    "substitutes = {x:42, y:23, yaw:0.5, speed:2, acceleration:2, dt:0.1, turn_rate_non_zero:2, zero_turn_rate:0}\n",
-    "display('Plugging in the numbers:', substitutes)\n",
+    "substitutes = {\n",
+    "    x: 42,\n",
+    "    y: 23,\n",
+    "    yaw: 0.5,\n",
+    "    speed: 2,\n",
+    "    acceleration: 2,\n",
+    "    dt: 0.1,\n",
+    "    turn_rate_non_zero: 2,\n",
+    "    zero_turn_rate: 0,\n",
+    "}\n",
+    "display(\"Plugging in the numbers:\", substitutes)\n",
     "display(next_state.evalf(subs=substitutes))\n",
     "\n",
-    "state = Matrix([x,y,yaw,speed,turn_rate_non_zero,acceleration])\n",
+    "state = Matrix([x, y, yaw, speed, turn_rate_non_zero, acceleration])\n",
     "print(\"Jacobian of the next state with respect to the previous state:\")\n",
     "J = next_state.jacobian(state)\n",
     "display(J)\n",
-    "display('Plugging in the numbers:', substitutes)\n",
+    "display(\"Plugging in the numbers:\", substitutes)\n",
     "display(J.evalf(subs=substitutes))\n",
     "\n",
     "print(\"Assuming a zero turn rate, state is:\")\n",
     "next_state = get_next_state(zero_turn_rate)\n",
     "display(next_state)\n",
-    "display('Plugging in the numbers:', substitutes)\n",
+    "display(\"Plugging in the numbers:\", substitutes)\n",
     "display(next_state.evalf(subs=substitutes))\n",
     "\n",
-    "state = Matrix([x,y,yaw,speed,zero_turn_rate,acceleration])\n",
+    "state = Matrix([x, y, yaw, speed, zero_turn_rate, acceleration])\n",
     "print(\"Jacobian of the next state with respect to the previous state with 0 turn rate:\")\n",
     "J = next_state.jacobian(state)\n",
     "display(J)\n",
     "\n",
-    "display('Plugging in the numbers:', substitutes)\n",
-    "display(J.evalf(subs=substitutes))\n"
+    "display(\"Plugging in the numbers:\", substitutes)\n",
+    "display(J.evalf(subs=substitutes))"
    ]
   },
   {
@@ -1117,13 +1147,14 @@
     }
    ],
    "source": [
-    "speed, yaw, dt, x, y, t = symbols('v \\\\theta \\Delta{t} x y t')\n",
-    "turn_rate_non_zero = Symbol('\\omega', nonzero=True, finite=True)\n",
-    "zero_turn_rate = Symbol('\\omega_0', zero=True)\n",
+    "speed, yaw, dt, x, y, t = symbols(\"v \\\\theta \\Delta{t} x y t\")\n",
+    "turn_rate_non_zero = Symbol(\"\\omega\", nonzero=True, finite=True)\n",
+    "zero_turn_rate = Symbol(\"\\omega_0\", zero=True)\n",
     "\n",
     "state_cvtr = Matrix([x, y, yaw, speed, turn_rate_non_zero])\n",
     "print(\"CVRT state is:\")\n",
     "display(state_cvtr)\n",
+    "\n",
     "\n",
     "def get_next_state(turn_rate):\n",
     "    # Specify the functions for yaw, x, and y.\n",
@@ -1138,34 +1169,45 @@
     "\n",
     "    return Matrix([next_x, next_y, next_yaw, speed, turn_rate])\n",
     "\n",
+    "\n",
     "# There is a difference in computation betwee the cases when the turn rate is allowed to be zero or not\n",
     "print(\"Assuming a non-zero turn rate, next state is:\")\n",
     "next_state = get_next_state(turn_rate_non_zero)\n",
     "display(next_state)\n",
-    "substitutes = {x:42, y:23, yaw:0.5, speed:2, dt:0.1, turn_rate_non_zero:2, zero_turn_rate:0}\n",
-    "display(Markdown('Plugging in the numbers:'), substitutes)\n",
+    "substitutes = {\n",
+    "    x: 42,\n",
+    "    y: 23,\n",
+    "    yaw: 0.5,\n",
+    "    speed: 2,\n",
+    "    dt: 0.1,\n",
+    "    turn_rate_non_zero: 2,\n",
+    "    zero_turn_rate: 0,\n",
+    "}\n",
+    "display(Markdown(\"Plugging in the numbers:\"), substitutes)\n",
     "display(next_state.evalf(subs=substitutes))\n",
     "\n",
-    "state = Matrix([x,y,yaw,speed,turn_rate_non_zero])\n",
+    "state = Matrix([x, y, yaw, speed, turn_rate_non_zero])\n",
     "print(\"Jacobian of the next state with respect to the previous state:\")\n",
     "J = next_state.jacobian(state)\n",
     "display(J)\n",
     "\n",
-    "display(Markdown('Plugging in the numbers:'), substitutes)\n",
+    "display(Markdown(\"Plugging in the numbers:\"), substitutes)\n",
     "display(J.evalf(subs=substitutes))\n",
     "\n",
     "print(\"Assuming a zero turn rate, next state is:\")\n",
     "next_state = get_next_state(zero_turn_rate)\n",
     "display(next_state)\n",
-    "display(Markdown('Plugging in the numbers:'), substitutes)\n",
+    "display(Markdown(\"Plugging in the numbers:\"), substitutes)\n",
     "display(next_state.evalf(subs=substitutes))\n",
     "\n",
-    "state = Matrix([x,y,yaw,speed,zero_turn_rate])\n",
-    "print(\"Jacobian of the next state with respect to the previous one with zero turn rate:\")\n",
+    "state = Matrix([x, y, yaw, speed, zero_turn_rate])\n",
+    "print(\n",
+    "    \"Jacobian of the next state with respect to the previous one with zero turn rate:\"\n",
+    ")\n",
     "J = next_state.jacobian(state)\n",
     "display(J)\n",
     "\n",
-    "display(Markdown('Plugging in the numbers:'), substitutes)\n",
+    "display(Markdown(\"Plugging in the numbers:\"), substitutes)\n",
     "display(J.evalf(subs=substitutes))"
    ]
   }
