--- a/notebooks/models/numerical_jacobian.ipynb
+++ b/notebooks/models/numerical_jacobian.ipynb
@@ -31,12 +31,12 @@
     "#     xy = x[1]\n",
     "#     v =  x[2]\n",
     "#     theta =x[3]\n",
-    "    \n",
+    "\n",
     "#     a = u[0]\n",
     "#     delta = u[1]\n",
-    "    \n",
+    "\n",
     "#     L=0.3\n",
-    "    \n",
+    "\n",
     "#     #vector of ackerman equations\n",
     "#     return np.array([\n",
     "#         np.cos(theta)*v,\n",
@@ -45,7 +45,7 @@
     "#         v*np.arctan(delta)/L\n",
     "#         ])\n",
     "\n",
-    "#DISCRETE\n",
+    "# DISCRETE\n",
     "def f(x, u, dt=0.1):\n",
     "    \"\"\"\n",
     "    :param x:\n",
@@ -53,55 +53,61 @@
     "    \"\"\"\n",
     "    xx = x[0]\n",
     "    xy = x[1]\n",
-    "    v =  x[2]\n",
-    "    theta =x[3]\n",
-    "    \n",
+    "    v = x[2]\n",
+    "    theta = x[3]\n",
+    "\n",
     "    a = u[0]\n",
     "    delta = u[1]\n",
-    "    \n",
-    "    L=0.3\n",
-    "    \n",
-    "    #vector of ackerman equations\n",
-    "    return np.array([\n",
-    "        xx + np.cos(theta)*v*dt,\n",
-    "        xy + np.sin(theta)*v*dt,\n",
-    "        v + a*dt,\n",
-    "        theta + v*np.arctan(delta)/L*dt\n",
-    "        ])\n",
     "\n",
-    "def Jacobians(f,x,u,epsilon=1e-4):\n",
+    "    L = 0.3\n",
+    "\n",
+    "    # vector of ackerman equations\n",
+    "    return np.array(\n",
+    "        [\n",
+    "            xx + np.cos(theta) * v * dt,\n",
+    "            xy + np.sin(theta) * v * dt,\n",
+    "            v + a * dt,\n",
+    "            theta + v * np.arctan(delta) / L * dt,\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def Jacobians(f, x, u, epsilon=1e-4):\n",
     "    \"\"\"\n",
     "    :param f:\n",
     "    :param x:\n",
     "    :param u:\n",
     "    \"\"\"\n",
-    "    \n",
-    "    jac_x = np.zeros((4,4))\n",
-    "    jac_u = np.zeros((4,2))\n",
-    "    \n",
-    "    perturb_x = np.eye(4)*epsilon\n",
-    "    perturb_u = np.eye(2)*epsilon\n",
-    "    \n",
-    "    #each row is state vector where one variable has been perturbed\n",
-    "    x_perturbed_plus = np.tile(x,(4,1))+perturb_x\n",
-    "    x_perturbed_minus = np.tile(x,(4,1))-perturb_x\n",
-    "    \n",
-    "    #each row is state vector where one variable has been perturbed\n",
-    "    u_perturbed_plus = np.tile(u,(2,1))+perturb_u\n",
-    "    u_perturbed_minus = np.tile(u,(2,1))-perturb_u\n",
-    "    \n",
-    "    for i in range(x.shape[0]):\n",
-    "        \n",
-    "        #each coloumn of the jac is given by perturbing a variable\n",
-    "        jac_x[:,i]= (f(x+perturb_x[i,:], u)-f(x-perturb_x[i,:], u))/2*epsilon\n",
-    "        \n",
-    "    for i in range(u.shape[0]):\n",
-    "        \n",
-    "        #each coloumn of the jac is given by perturbing a variable\n",
-    "        jac_u[:,i]= (f(x, u+perturb_u[i,:])-f(x, u-perturb_u[i,:]))/2*epsilon\n",
     "\n",
-    "    return jac_x, jac_u\n",
-    "    "
+    "    jac_x = np.zeros((4, 4))\n",
+    "    jac_u = np.zeros((4, 2))\n",
+    "\n",
+    "    perturb_x = np.eye(4) * epsilon\n",
+    "    perturb_u = np.eye(2) * epsilon\n",
+    "\n",
+    "    # each row is state vector where one variable has been perturbed\n",
+    "    x_perturbed_plus = np.tile(x, (4, 1)) + perturb_x\n",
+    "    x_perturbed_minus = np.tile(x, (4, 1)) - perturb_x\n",
+    "\n",
+    "    # each row is state vector where one variable has been perturbed\n",
+    "    u_perturbed_plus = np.tile(u, (2, 1)) + perturb_u\n",
+    "    u_perturbed_minus = np.tile(u, (2, 1)) - perturb_u\n",
+    "\n",
+    "    for i in range(x.shape[0]):\n",
+    "\n",
+    "        # each coloumn of the jac is given by perturbing a variable\n",
+    "        jac_x[:, i] = (\n",
+    "            (f(x + perturb_x[i, :], u) - f(x - perturb_x[i, :], u)) / 2 * epsilon\n",
+    "        )\n",
+    "\n",
+    "    for i in range(u.shape[0]):\n",
+    "\n",
+    "        # each coloumn of the jac is given by perturbing a variable\n",
+    "        jac_u[:, i] = (\n",
+    "            (f(x, u + perturb_u[i, :]) - f(x, u - perturb_u[i, :])) / 2 * epsilon\n",
+    "        )\n",
+    "\n",
+    "    return jac_x, jac_u"
    ]
   },
   {
@@ -128,11 +134,11 @@
     }
    ],
    "source": [
-    "#starting condition\n",
-    "x=np.array([0,0,1,0])\n",
-    "u=np.array([1,0.2])\n",
+    "# starting condition\n",
+    "x = np.array([0, 0, 1, 0])\n",
+    "u = np.array([1, 0.2])\n",
     "\n",
-    "Jacobians(f,x,u)"
+    "Jacobians(f, x, u)"
    ]
   }
  ],
